--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -1,16 +1,13 @@
-* {
-    margin: 0;
-    box-sizing: 0;
-}
 
-nav {
+
+/* nav {
     width: 100%;
     height: 5em;
     background-color: rgb(98, 98, 156);
     display: flex;
     justify-content: flex-start;
     padding: 1em;
-}
+} */
 
 .burger-menu {
     height: 100%;
