--- a/src/components/project/content.css
+++ b/src/components/project/content.css
@@ -1,3 +1,18 @@
 .content {
     background-color: blue;
 }
+
+.bckimg {
+    background-image: url(../../img/Rendering.png);
+    background-position: bottom;
+    background-size: cover;
+    height: 500px;
+    width: 100%;
+}
+
+.mainCanvas {
+display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: center;
+}
