--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -1,6 +1,6 @@
 .footer {
     text-align: center;
-    background-image: linear-gradient(180deg, var(--darkblue), #20394b);
+    background-color: #94304b;
     color: var(--platinum);
     padding: 10px 0px;
     height: auto;
