--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -6,14 +6,18 @@
 }
 
 .header {
-    /* display:flex;
-    justify-content: space-between;
+    display:flex;
+    /* justify-content: space-between;
     align-items: center; */
-    background-image: linear-gradient(180deg, var(--blue), var(--darkblue));
+    background-image: url(../../img/pattern.jpg);
     margin: 0;
-    color: rgb(218, 136, 29);
+    color: #94304b;
     font-family: 'Bebas Neue';
     font-size: xx-large;
+}
+
+.header h1 {
+    margin: 20px;
 }
 
 .navlinks {
