--- a/src/App.css
+++ b/src/App.css
@@ -8,3 +8,69 @@
     margin: 0;
     box-sizing: 0;
 }
+
+.mainContent {
+    font-family: 'Montserrat', sans-serif;
+    line-height: 1.5em;
+    background-color: rgb(127, 127, 146);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.mainContent h1 {
+    padding-top: 25px;
+}
+
+.mainContent p {
+    padding-top: 20px;
+    padding-bottom: 40px;
+    padding-left: 30px;
+    padding-right: 30px;
+    line-height: 2em;
+}
+
+.textCard {
+    text-align: center;
+    background-color: rgba(0, 0, 0, 0.5);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+    width: 75%;
+    border-radius: 50px;
+    margin-top: 15px;
+    margin-bottom: 10px;
+    color: whitesmoke;
+    font-style: Monserrat;
+}
+
+.textCard p {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.mainProjectStyle {
+    background-color: aqua;
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    padding: 25px;
+}
+
+.hide {
+    display: none;
+}
+
+/* Responsive design with media queries */
+
+@media screen and (max-width:768px) {
+
+    .mainContent {
+        background-color: aquamarine;
+    }
+
+    .mainContent p {
+            width: 80%;
+            line-height: 1.5em;
+    }
+}
