--- a/src/components/project/content.css
+++ b/src/components/project/content.css
@@ -1,7 +1,3 @@
-.content {
-    background-color: blue;
-}
-
 .bckimg {
     background-position: bottom;
     background-size: cover;
@@ -12,7 +8,16 @@
 .mainCanvas {
 display: flex;
 flex-direction: column;
-justify-content: center;
+justify-content: flex-end;
 align-items: center;
 margin: 25px;
+font-family: Montserrat;
+border-style: solid;
+border-color: #94304b;
+border-width: 3px;
+opacity: .50;
+}
+
+.mainCanvas:hover {
+    opacity: 1;
 }
